# temp_projct-

./: README.md  pyproject.toml
config/: cm4_config.json  cm4_config.mock.json
docs/: project_information.md
src/cm4_skeleton/: __init__.py  __main__.py  app.py  config.py  gpio.py  logging_utils.py  mock_serial_lab.py  protocol.py  serial_worker.py
tests/: __init__.py  test_app.py  test_config.py  test_gpio.py  test_logging_utils.py  test_mock_serial_lab.py  test_protocol.py  test_serial_worker.py
